Members page spacing corrected

--- a/public/css/teams/styles.css
+++ b/public/css/teams/styles.css
@@ -71,6 +71,7 @@ section {
   justify-content: center;
   background: linear-gradient(#ff0000, #00ff00, #fffb00, #0000ff);
   border-radius: 50%;
+  margin-bottom: 60px;
 }
 .lead_card img {
   /*width: 80%;*/
